# nixe

./: .editorconfig  .env.integration.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  nixe.toml  rust-toolchain.toml  swiitx.toml
.cargo/: config.toml
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  library.rs  logging.rs  main.rs
apps/cli/src/commands/: list.rs  mod.rs  run.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: address.rs  coverage.rs  error.rs  exception.rs  lib.rs  location.rs  memory.rs  profile.rs  vcpu.rs
crates/cpu/src/decode/: a32.rs  a64.rs  aarch32.rs  mod.rs  registry.rs  t32.rs  table.rs
crates/cpu/src/decode/a32/: control.rs  fp_simd.rs  integer.rs  memory.rs  mod.rs
crates/cpu/src/decode/a64/: control.rs  fp_simd.rs  integer.rs  memory.rs  mod.rs  system.rs
crates/cpu/src/decode/t32/: control.rs  integer.rs  memory.rs  mod.rs
crates/cpu/src/interpreter/: a32.rs  a64.rs  aarch32.rs  mod.rs  t32.rs  tests.rs
crates/cpu/src/interpreter/a32/: control.rs  fp_simd.rs  integer.rs  memory.rs  mod.rs
crates/cpu/src/interpreter/a64/: control.rs  fp_simd.rs  integer.rs  memory.rs  (+2 more)
crates/cpu/src/ir/: block.rs  builder.rs  mod.rs  op.rs  print.rs  terminator.rs  types.rs  value.rs  verify.rs
crates/cpu/src/semantics/: arithmetic.rs  bits.rs  conditions.rs  floating_point.rs  immediate.rs  mod.rs  shifts.rs  vector.rs
crates/cpu/src/state/: a32.rs  a64.rs  mod.rs
crates/cpu/src/translate/: a32.rs  a64.rs  block.rs  mod.rs  observability.rs  t32.rs
crates/cpu/tests/: README.md  dependency_boundaries.rs  differential.rs  qemu_differential.rs
crates/cpu/tests/oracle/: arm_oracle_runner.c
crates/cpu/tests/support/: ir_evaluator.rs  mod.rs
crates/horizon/: Cargo.toml
crates/horizon/src/: ipc.rs  ipc_message.rs  ipc_result.rs  ipc_wire.rs  lib.rs  object.rs  svc.rs  svc_dispatch.rs
crates/horizon/tests/: dependency_boundaries.rs  homebrew_acceptance.rs  svc_dispatch.rs  synthetic_launch_matrix.rs
crates/horizon/tests/support/: synthetic_packages.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  model.rs  sdl.rs
crates/loader/content/: Cargo.toml
crates/loader/content/src/: bktr.rs  cnmt.rs  compressed_package.rs  crypto.rs  exefs.rs  hfs0.rs  integrity.rs  keys.rs  lib.rs  nacp.rs  nca.rs  ncz.rs  nsp.rs  nsz.rs  pfs0.rs  romfs.rs  version.rs  xci.rs  xcz.rs
crates/loader/content/tests/: external_nca.rs
crates/loader/executable/: Cargo.toml
crates/loader/executable/src/: lib.rs  npdm.rs  nro.rs  nso.rs  preparation.rs
crates/loader/executable/tests/: npdm.rs  real_npdm.rs  real_nso.rs
crates/loader/storage/: Cargo.toml
crates/loader/storage/src/: file.rs  lib.rs  sub.rs
crates/loader/title/: Cargo.toml
crates/loader/title/src/: catalog.rs  control.rs  discovery.rs  error.rs  inspection.rs  lib.rs  nsp_metadata.rs  package.rs  package_content.rs  resolved_title.rs  resolver.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: diagnostics.rs  exception_dispatch.rs  execution.rs  handle.rs  launch_plan.rs  launcher.rs  lib.rs  module_memory.rs  process_builder.rs  process_mount.rs  virtual_time.rs
crates/runtime/tests/: dependency_boundaries.rs  prepared_module_memory.rs  real_launch_plan.rs  real_prepared_module_memory.rs  synthetic_launch_matrix.rs
crates/runtime/tests/support/: mod.rs  synthetic_packages.rs
docs/: CPU Dynamic Recompiler Technical Specification.md
docs/research/: jit.md
docs/research/switch1/: content_formats.md
docs/switch1/: Content Formats.md  Graphics and Display Architecture.md  IPC, HIPC and CMIF.md  Runtime Linker (rtld).md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decoder.rs  diagnostics.rs  ir_verifier.rs  translation.rs
roms/homebrew/: README.md
roms/homebrew/acceptance/: minimal-a64.nro.fixture
roms/homebrew/account/: account.nro
roms/homebrew/alarm-notifications/: alarm-notifications.nro
roms/homebrew/app_controldata/: app_controldata.nro
roms/homebrew/applet/app-playstats/: app-playstats.nro
roms/homebrew/applet/light-sensor/: light-sensor.nro
roms/homebrew/applet/lockexit/: lockexit.nro
roms/homebrew/applet/recording/: recording.nro
roms/homebrew/applet/screenshot-overlay/: screenshot-overlay.nro
roms/homebrew/applet/vrmode/: vrmode.nro
roms/homebrew/audio/audren-simple/: audren-simple.nro
roms/homebrew/audio/echo/: echo.nro
roms/homebrew/audio/hwopus-decoder/: hwopus-decoder.nro
roms/homebrew/audio/playtone/: playtone.nro
roms/homebrew/exception-handler/: exception-handler.nro
roms/homebrew/fs/romfs/: romfs.nro
roms/homebrew/fs/save/: save.nro
roms/homebrew/fs/sdmc/: sdmc.nro
roms/homebrew/graphics/shared_font/: shared_font.nro
roms/homebrew/graphics/simplegfx/: simplegfx.nro
roms/homebrew/graphics/simplegfx_moviemaker/: simplegfx_moviemaker.nro
roms/homebrew/hid/abstracted-pad/: abstracted-pad.nro
roms/homebrew/hid/colors/: colors.nro
roms/homebrew/hid/hdls/: hdls.nro
roms/homebrew/hid/irsensor/: irsensor.nro
roms/homebrew/hid/notification-led/: notification-led.nro
roms/homebrew/hid/read-controls/: read-controls.nro
roms/homebrew/hid/ring-con/: ring-con.nro
roms/homebrew/hid/sevensixaxis/: sevensixaxis.nro
roms/homebrew/hid/sixaxis/: sixaxis.nro
roms/homebrew/hid/touch-screen/: touch-screen.nro
roms/homebrew/hid/vibration/: vibration.nro
roms/homebrew/jit/: jit.nro
roms/homebrew/misc/barrier/: barrier.nro
roms/homebrew/misc/user_events/: user_events.nro
roms/homebrew/misc/user_timers/: user_timers.nro
roms/homebrew/network/curl/: curl.nro
roms/homebrew/network/ldn/: ldn.nro
roms/homebrew/network/lp2p/: lp2p.nro
roms/homebrew/network/nxlink_stdio/: nxlink_stdio.nro
roms/homebrew/nfc/: nfc.nro
roms/homebrew/power/: power.nro
roms/homebrew/settings/get_system_language/: get_system_language.nro
roms/homebrew/templates/application/: application.nro
roms/homebrew/time/: time.nro
roms/homebrew/usb/usbhs/: usbhs.nro
scripts/: test-integration.sh
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+18 files in other folders)
