[workspace]
members = [
    "apps/cli",
    "crates/config",
    "crates/cpu",
    "crates/horizon",
    "crates/loader/content",
    "crates/loader/executable",
    "crates/loader/storage",
    "crates/loader/title",
    "crates/runtime",
]
exclude = ["crates/vendor/ruzstd-zbic"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
aes = "0.8.4"
lz4_flex = "0.11"
ruzstd-zbic = { path = "crates/vendor/ruzstd-zbic" }
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3.27"
swiitx-config = { path = "crates/config" }
swiitx-cpu = { path = "crates/cpu" }
swiitx-horizon = { path = "crates/horizon" }
swiitx-loader-content = { path = "crates/loader/content" }
swiitx-loader-executable = { path = "crates/loader/executable" }
swiitx-loader-storage = { path = "crates/loader/storage" }
swiitx-loader-title = { path = "crates/loader/title" }
swiitx-runtime = { path = "crates/runtime" }
toml = "0.8"
zstd = { version = "0.13", default-features = false }
