[workspace]
members = [
    "apps/cli",
    "crates/config",
    "crates/cpu",
    "crates/horizon",
    "crates/input",
    "crates/loader/content",
    "crates/loader/executable",
    "crates/loader/storage",
    "crates/loader/title",
    "crates/runtime",
    "tools/xtask",
]
exclude = ["crates/vendor/ruzstd-zbic", "fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
aes = "0.8.4"
ctrlc = "3.4"
getrandom = "0.4"
lz4_flex = "0.11"
log = "0.4"
ruzstd-zbic = { path = "crates/vendor/ruzstd-zbic" }
sanitize-filename = "0.6"
sdl3 = { version = "=0.18.4", features = [
    "build-from-source",
    "build-from-source-unix-console",
] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3.27"
nixe-config = { path = "crates/config" }
nixe-cpu = { path = "crates/cpu" }
nixe-horizon = { path = "crates/horizon" }
nixe-input = { path = "crates/input" }
nixe-loader-content = { path = "crates/loader/content" }
nixe-loader-executable = { path = "crates/loader/executable" }
nixe-loader-storage = { path = "crates/loader/storage" }
nixe-loader-title = { path = "crates/loader/title" }
nixe-runtime = { path = "crates/runtime" }
toml = "0.8"
zstd = { version = "0.13", default-features = false }
