[package]
name = "swiitx-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
sanitize-filename.workspace = true
swiitx-config.workspace = true
swiitx-loader-content.workspace = true
swiitx-loader-executable.workspace = true
swiitx-loader-storage.workspace = true
swiitx-loader-title.workspace = true

[dev-dependencies]
tempfile.workspace = true
