[package]
name = "nixe-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
log.workspace = true
sha2.workspace = true
nixe-config.workspace = true
nixe-horizon.workspace = true
nixe-loader-content.workspace = true
nixe-loader-executable.workspace = true
nixe-loader-storage.workspace = true
nixe-loader-title.workspace = true
nixe-runtime.workspace = true
