[package]
name = "nixe-horizon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nixe-cpu.workspace = true
nixe-loader-storage.workspace = true
nixe-loader-title.workspace = true
nixe-runtime.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile.workspace = true
