[package]
name = "swiitx-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
swiitx-cpu.workspace = true
swiitx-loader-executable.workspace = true
swiitx-loader-content.workspace = true
swiitx-loader-storage.workspace = true
swiitx-loader-title.workspace = true

[dev-dependencies]
tempfile.workspace = true
