[package]
name = "swiitx-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
swiitx-config.workspace = true
swiitx-cpu.workspace = true
swiitx-loader-executable.workspace = true
swiitx-loader-content.workspace = true
swiitx-loader-storage.workspace = true
swiitx-loader-title.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile.workspace = true
