[package]
name = "nixe-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nixe-config.workspace = true
nixe-cpu.workspace = true
nixe-loader-executable.workspace = true
nixe-loader-content.workspace = true
nixe-loader-storage.workspace = true
nixe-loader-title.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile.workspace = true
