[package]
name = "nixe-loader-title"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nixe-loader-content.workspace = true
nixe-loader-executable.workspace = true
nixe-loader-storage.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile.workspace = true
zstd.workspace = true
